feat: done with basics

--- a/autograd.ipynb
+++ b/autograd.ipynb
@@ -50,6 +50,88 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### In this network, w and b are parameters, which we need to optimize. Thus, we need to be able to compute the gradients of loss function with respect to those variables. In order to do that, we set the requires_grad property of those tensors."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<AddBackward0 at 0x72d7c82f3a00>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "z.grad_fn # reference to the backward propagation function is stored here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### To optimize weights of parameters in the neural network, we need to compute the derivatives of our loss function with respect to parameters, namely, we need ∂loss∂w∂w∂loss​ and ∂loss∂b∂b∂loss​ under some fixed values of x and y. To compute those derivatives, we call loss.backward(), and then retrieve the values from w.grad and b.grad:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.3014, 0.3174, 0.2537],\n",
+      "        [0.3014, 0.3174, 0.2537],\n",
+      "        [0.3014, 0.3174, 0.2537],\n",
+      "        [0.3014, 0.3174, 0.2537],\n",
+      "        [0.3014, 0.3174, 0.2537]])\n",
+      "tensor([0.3014, 0.3174, 0.2537])\n"
+     ]
+    }
+   ],
+   "source": [
+    "loss.backward()\n",
+    "print(w.grad)\n",
+    "print(b.grad)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[1., 0., 0., 0., 0.],\n",
+       "        [0., 1., 0., 0., 0.],\n",
+       "        [0., 0., 1., 0., 0.],\n",
+       "        [0., 0., 0., 1., 0.],\n",
+       "        [0., 0., 0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.eye(5)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
