--- a/Pytorch_kaggle/notebooks/2.ipynb
+++ b/Pytorch_kaggle/notebooks/2.ipynb
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -379,15 +379,12 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "df_column = df_train.columns\n",
     "for column in df_column:\n",
     "    if df_train[column].dtype in [\"float64\", \"int64\"]:\n",
     "        mean = df_train[column].mean()\n",
     "        df_train[column] = df_train[column].fillna(mean)\n",
-    "df_train.head()\n",
-    "\n"
+    "df_train.head()"
    ]
   },
   {
@@ -570,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -600,15 +597,12 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
-    "df_train.isnull().any()\n",
-    "\n"
+    "df_train.isnull().any()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -780,20 +774,17 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "df_column = df_test.columns\n",
     "for column in df_column:\n",
     "    if df_test[column].dtype in [\"float64\", \"int64\"]:\n",
     "        mean = df_test[column].mean()\n",
     "        df_test[column] = df_test[column].fillna(mean)\n",
-    "df_train.head()\n",
-    "\n"
+    "df_train.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -978,11 +969,8 @@
     }
    ],
    "source": [
-    "\n",
-    "\n",
     "df_test.ffill(inplace = True)\n",
-    "df_test.head()\n",
-    "\n"
+    "df_test.head()"
    ]
   },
   {
