feat: done with the kaggle comp

--- a/Pytorch_kaggle/notebooks/2.ipynb
+++ b/Pytorch_kaggle/notebooks/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
        "4                    5.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
        "4                        1.0                    1.0  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1157,10 +1157,460 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>City</th>\n",
+       "      <th>Profession</th>\n",
+       "      <th>CGPA</th>\n",
+       "      <th>Sleep Duration</th>\n",
+       "      <th>Dietary Habits</th>\n",
+       "      <th>Degree</th>\n",
+       "      <th>Have you ever had suicidal thoughts ?</th>\n",
+       "      <th>Work/Study Hours</th>\n",
+       "      <th>Financial Stress</th>\n",
+       "      <th>Family History of Mental Illness</th>\n",
+       "      <th>Satisfaction in work life</th>\n",
+       "      <th>Pressure in work life</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>140700</td>\n",
+       "      <td>Shivam</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>Visakhapatnam</td>\n",
+       "      <td>Judge</td>\n",
+       "      <td>7.674016</td>\n",
+       "      <td>Less than 5 hours</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>LLB</td>\n",
+       "      <td>No</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>140701</td>\n",
+       "      <td>Sanya</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>Kolkata</td>\n",
+       "      <td>Educational Consultant</td>\n",
+       "      <td>7.674016</td>\n",
+       "      <td>Less than 5 hours</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>B.Ed</td>\n",
+       "      <td>No</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>140702</td>\n",
+       "      <td>Yash</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>53.0</td>\n",
+       "      <td>Jaipur</td>\n",
+       "      <td>Teacher</td>\n",
+       "      <td>7.674016</td>\n",
+       "      <td>7-8 hours</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>B.Arch</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>140703</td>\n",
+       "      <td>Nalini</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>Rajkot</td>\n",
+       "      <td>Teacher</td>\n",
+       "      <td>6.840000</td>\n",
+       "      <td>More than 8 hours</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>BSc</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>140704</td>\n",
+       "      <td>Shaurya</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>Kalyan</td>\n",
+       "      <td>Teacher</td>\n",
+       "      <td>7.674016</td>\n",
+       "      <td>7-8 hours</td>\n",
+       "      <td>Moderate</td>\n",
+       "      <td>BCA</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       id     Name  Gender   Age           City              Profession  \\\n",
+       "0  140700   Shivam    Male  53.0  Visakhapatnam                   Judge   \n",
+       "1  140701    Sanya  Female  58.0        Kolkata  Educational Consultant   \n",
+       "2  140702     Yash    Male  53.0         Jaipur                 Teacher   \n",
+       "3  140703   Nalini  Female  23.0         Rajkot                 Teacher   \n",
+       "4  140704  Shaurya    Male  47.0         Kalyan                 Teacher   \n",
+       "\n",
+       "       CGPA     Sleep Duration Dietary Habits  Degree  \\\n",
+       "0  7.674016  Less than 5 hours       Moderate     LLB   \n",
+       "1  7.674016  Less than 5 hours       Moderate    B.Ed   \n",
+       "2  7.674016          7-8 hours       Moderate  B.Arch   \n",
+       "3  6.840000  More than 8 hours       Moderate     BSc   \n",
+       "4  7.674016          7-8 hours       Moderate     BCA   \n",
+       "\n",
+       "  Have you ever had suicidal thoughts ?  Work/Study Hours  Financial Stress  \\\n",
+       "0                                    No               9.0               3.0   \n",
+       "1                                    No               6.0               4.0   \n",
+       "2                                   Yes              12.0               4.0   \n",
+       "3                                   Yes              10.0               4.0   \n",
+       "4                                   Yes               3.0               4.0   \n",
+       "\n",
+       "  Family History of Mental Illness  Satisfaction in work life  \\\n",
+       "0                              Yes                        5.0   \n",
+       "1                               No                        4.0   \n",
+       "2                               No                        1.0   \n",
+       "3                               No                        1.0   \n",
+       "4                               No                        5.0   \n",
+       "\n",
+       "   Pressure in work life  \n",
+       "0                    2.0  \n",
+       "1                    2.0  \n",
+       "2                    4.0  \n",
+       "3                    5.0  \n",
+       "4                    5.0  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_test.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "# PyTorch MODEL "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# split feature and target\n",
+    "# dataset class\n",
+    "# train and val split\n",
+    "# normalize\n",
+    "# data loader\n",
+    "# model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch\n",
+    "from torch import nn\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MentalHealthDataset(Dataset):\n",
+    "    def __init__(self,features,labels):\n",
+    "        self.features=torch.FloatTensor(np.array(features))\n",
+    "        self.labels=torch.LongTensor(np.array(labels))\n",
+    "        \n",
+    "    def __len__(self):\n",
+    "        return len(self.labels)\n",
+    "    \n",
+    "    def __getitem__(self, index):\n",
+    "        return self.features[index],self.labels[index]    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DepressionClassifier(nn.Module):\n",
+    "    def __init__(self, input_size):\n",
+    "        super(DepressionClassifier, self).__init__()\n",
+    "        self.layers=nn.Sequential(\n",
+    "            nn.Linear(input_size, 264),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.Linear(264, 132),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.Linear(132, 64),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Dropout(0.2),\n",
+    "            nn.Linear(64, 2)\n",
+    "        )\n",
+    "    def forward(self,x):\n",
+    "        return self.layers(x)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def prepare_data(df,target_column=\"Depression\",test_size=0.4,batch_size=32):\n",
+    "    features=df.drop(columns=target_column)\n",
+    "    labels=df[target_column]\n",
+    "    \n",
+    "    X_train,X_val,y_train,y_val=train_test_split(features,labels,test_size=test_size,random_state=42)\n",
+    "    \n",
+    "    sc=StandardScaler()\n",
+    "    X_train_scaled=sc.fit_transform(X_train)\n",
+    "    X_val_scaled=sc.transform(X_val)\n",
+    "    \n",
+    "    train_dataset=MentalHealthDataset(X_train_scaled,y_train)\n",
+    "    val_dataset=MentalHealthDataset(X_val_scaled,y_val)\n",
+    "    \n",
+    "    train_loader=DataLoader(train_dataset,batch_size=batch_size,shuffle=True)\n",
+    "    val_loader=DataLoader(val_dataset,batch_size=batch_size)\n",
+    "    \n",
+    "    return train_loader,val_loader,sc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_model(model, train_loader, val_loader, criterion, optimizer, epochs=20, device='cuda'):\n",
+    "    device = torch.device(device if torch.cuda.is_available() else 'cpu')\n",
+    "    model = model.to(device)\n",
+    "    \n",
+    "    for epoch in range(epochs):\n",
+    "        # Training phase\n",
+    "        model.train()\n",
+    "        train_loss = 0\n",
+    "        train_correct = 0\n",
+    "        train_total = 0\n",
+    "        \n",
+    "        for features, labels in train_loader:\n",
+    "            features, labels = features.to(device), labels.to(device)\n",
+    "            \n",
+    "            # Forward pass\n",
+    "            outputs = model(features)\n",
+    "            loss = criterion(outputs, labels)\n",
+    "            \n",
+    "            # Backward pass and optimization\n",
+    "            optimizer.zero_grad()\n",
+    "            loss.backward()\n",
+    "            optimizer.step()\n",
+    "            \n",
+    "            # Calculate accuracy\n",
+    "            _, predicted = torch.max(outputs.data, 1)\n",
+    "            train_total += labels.size(0)\n",
+    "            train_correct += (predicted == labels).sum().item()\n",
+    "            train_loss += loss.item()\n",
+    "        \n",
+    "        # Validation phase\n",
+    "        model.eval()\n",
+    "        val_loss = 0\n",
+    "        val_correct = 0\n",
+    "        val_total = 0\n",
+    "        \n",
+    "        with torch.no_grad():\n",
+    "            for features, labels in val_loader:\n",
+    "                features, labels = features.to(device), labels.to(device)\n",
+    "                outputs = model(features)\n",
+    "                loss = criterion(outputs, labels)\n",
+    "                \n",
+    "                _, predicted = torch.max(outputs.data, 1)\n",
+    "                val_total += labels.size(0)\n",
+    "                val_correct += (predicted == labels).sum().item()\n",
+    "                val_loss += loss.item()\n",
+    "        \n",
+    "        # Print epoch statistics\n",
+    "        print(f'Epoch [{epoch+1}/{epochs}]')\n",
+    "        print(f'Train Loss: {train_loss/len(train_loader):.4f}, Train Acc: {100*train_correct/train_total:.2f}%')\n",
+    "        print(f'Val Loss: {val_loss/len(val_loader):.4f}, Val Acc: {100*val_correct/val_total:.2f}%\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch [1/20]\n",
+      "Train Loss: 0.3944, Train Acc: 83.53%\n",
+      "Val Loss: 0.2187, Val Acc: 91.72%\n",
+      "\n",
+      "Epoch [2/20]\n",
+      "Train Loss: 0.2040, Train Acc: 91.91%\n",
+      "Val Loss: 0.1836, Val Acc: 92.37%\n",
+      "\n",
+      "Epoch [3/20]\n",
+      "Train Loss: 0.1897, Train Acc: 92.25%\n",
+      "Val Loss: 0.1785, Val Acc: 92.64%\n",
+      "\n",
+      "Epoch [4/20]\n",
+      "Train Loss: 0.1872, Train Acc: 92.41%\n",
+      "Val Loss: 0.1763, Val Acc: 92.78%\n",
+      "\n",
+      "Epoch [5/20]\n",
+      "Train Loss: 0.1839, Train Acc: 92.67%\n",
+      "Val Loss: 0.1746, Val Acc: 92.91%\n",
+      "\n",
+      "Epoch [6/20]\n",
+      "Train Loss: 0.1820, Train Acc: 92.62%\n",
+      "Val Loss: 0.1738, Val Acc: 92.88%\n",
+      "\n",
+      "Epoch [7/20]\n",
+      "Train Loss: 0.1803, Train Acc: 92.74%\n",
+      "Val Loss: 0.1729, Val Acc: 92.93%\n",
+      "\n",
+      "Epoch [8/20]\n",
+      "Train Loss: 0.1801, Train Acc: 92.73%\n",
+      "Val Loss: 0.1722, Val Acc: 92.95%\n",
+      "\n",
+      "Epoch [9/20]\n",
+      "Train Loss: 0.1783, Train Acc: 92.82%\n",
+      "Val Loss: 0.1717, Val Acc: 92.97%\n",
+      "\n",
+      "Epoch [10/20]\n",
+      "Train Loss: 0.1778, Train Acc: 92.79%\n",
+      "Val Loss: 0.1714, Val Acc: 93.00%\n",
+      "\n",
+      "Epoch [11/20]\n",
+      "Train Loss: 0.1769, Train Acc: 92.86%\n",
+      "Val Loss: 0.1710, Val Acc: 93.02%\n",
+      "\n",
+      "Epoch [12/20]\n",
+      "Train Loss: 0.1764, Train Acc: 92.94%\n",
+      "Val Loss: 0.1706, Val Acc: 93.04%\n",
+      "\n",
+      "Epoch [13/20]\n",
+      "Train Loss: 0.1762, Train Acc: 92.86%\n",
+      "Val Loss: 0.1705, Val Acc: 93.02%\n",
+      "\n",
+      "Epoch [14/20]\n",
+      "Train Loss: 0.1755, Train Acc: 92.96%\n",
+      "Val Loss: 0.1702, Val Acc: 93.03%\n",
+      "\n",
+      "Epoch [15/20]\n",
+      "Train Loss: 0.1749, Train Acc: 92.96%\n",
+      "Val Loss: 0.1699, Val Acc: 93.07%\n",
+      "\n",
+      "Epoch [16/20]\n",
+      "Train Loss: 0.1750, Train Acc: 92.94%\n",
+      "Val Loss: 0.1696, Val Acc: 93.05%\n",
+      "\n",
+      "Epoch [17/20]\n",
+      "Train Loss: 0.1728, Train Acc: 93.07%\n",
+      "Val Loss: 0.1695, Val Acc: 93.08%\n",
+      "\n",
+      "Epoch [18/20]\n",
+      "Train Loss: 0.1734, Train Acc: 92.99%\n",
+      "Val Loss: 0.1693, Val Acc: 93.09%\n",
+      "\n",
+      "Epoch [19/20]\n",
+      "Train Loss: 0.1732, Train Acc: 93.00%\n",
+      "Val Loss: 0.1692, Val Acc: 93.10%\n",
+      "\n",
+      "Epoch [20/20]\n",
+      "Train Loss: 0.1731, Train Acc: 93.04%\n",
+      "Val Loss: 0.1689, Val Acc: 93.11%\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df=df_train\n",
+    "train_loader,val_loader,sc=prepare_data(df)\n",
+    "input_size=len(df.columns)-1\n",
+    "model=DepressionClassifier(input_size)\n",
+    "# Define loss function and optimizer\n",
+    "criterion = nn.CrossEntropyLoss()\n",
+    "optimizer = torch.optim.Adam(model.parameters(), lr=0.00001)\n",
+    "\n",
+    "# Train the model\n",
+    "train_model(model, train_loader, val_loader, criterion, optimizer)"
    ]
   }
  ],
