--- a/Pytorch_kaggle/notebooks/2.ipynb
+++ b/Pytorch_kaggle/notebooks/2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +373,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +555,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -567,7 +567,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +591,7 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -768,7 +768,7 @@
        "4           0                        1.0                    1.0  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -784,7 +784,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -963,7 +963,7 @@
        "4                    5.0  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -975,7 +975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -1141,7 +1141,7 @@
        "4                        1.0                    1.0  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -1337,7 +1337,7 @@
        "4                    5.0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1355,7 +1355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1369,7 +1369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1384,7 +1384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1402,7 +1402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1410,16 +1410,19 @@
     "    def __init__(self, input_size):\n",
     "        super(DepressionClassifier, self).__init__()\n",
     "        self.layers=nn.Sequential(\n",
-    "            nn.Linear(input_size, 264),\n",
+    "            nn.Linear(input_size, 256),\n",
+    "            nn.BatchNorm1d(256),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.2),\n",
-    "            nn.Linear(264, 132),\n",
+    "            nn.Linear(256, 64),\n",
+    "            nn.BatchNorm1d(64),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.2),\n",
-    "            nn.Linear(132, 64),\n",
+    "            nn.Linear(64, 32),\n",
+    "            nn.BatchNorm1d(32),\n",
     "            nn.ReLU(),\n",
     "            nn.Dropout(0.2),\n",
-    "            nn.Linear(64, 2)\n",
+    "            nn.Linear(32, 2)\n",
     "        )\n",
     "    def forward(self,x):\n",
     "        return self.layers(x)    "
@@ -1427,7 +1430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1452,7 +1455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1510,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1518,84 +1521,84 @@
      "output_type": "stream",
      "text": [
       "Epoch [1/20]\n",
-      "Train Loss: 0.3944, Train Acc: 83.53%\n",
-      "Val Loss: 0.2187, Val Acc: 91.72%\n",
+      "Train Loss: 0.5400, Train Acc: 75.51%\n",
+      "Val Loss: 0.3805, Val Acc: 91.04%\n",
       "\n",
       "Epoch [2/20]\n",
-      "Train Loss: 0.2040, Train Acc: 91.91%\n",
-      "Val Loss: 0.1836, Val Acc: 92.37%\n",
+      "Train Loss: 0.3503, Train Acc: 88.83%\n",
+      "Val Loss: 0.2876, Val Acc: 91.67%\n",
       "\n",
       "Epoch [3/20]\n",
-      "Train Loss: 0.1897, Train Acc: 92.25%\n",
-      "Val Loss: 0.1785, Val Acc: 92.64%\n",
+      "Train Loss: 0.2785, Train Acc: 90.48%\n",
+      "Val Loss: 0.2404, Val Acc: 91.71%\n",
       "\n",
       "Epoch [4/20]\n",
-      "Train Loss: 0.1872, Train Acc: 92.41%\n",
-      "Val Loss: 0.1763, Val Acc: 92.78%\n",
+      "Train Loss: 0.2453, Train Acc: 90.97%\n",
+      "Val Loss: 0.2091, Val Acc: 92.54%\n",
       "\n",
       "Epoch [5/20]\n",
-      "Train Loss: 0.1839, Train Acc: 92.67%\n",
-      "Val Loss: 0.1746, Val Acc: 92.91%\n",
+      "Train Loss: 0.2275, Train Acc: 91.15%\n",
+      "Val Loss: 0.1892, Val Acc: 92.83%\n",
       "\n",
       "Epoch [6/20]\n",
-      "Train Loss: 0.1820, Train Acc: 92.62%\n",
-      "Val Loss: 0.1738, Val Acc: 92.88%\n",
+      "Train Loss: 0.2186, Train Acc: 91.27%\n",
+      "Val Loss: 0.1848, Val Acc: 92.90%\n",
       "\n",
       "Epoch [7/20]\n",
-      "Train Loss: 0.1803, Train Acc: 92.74%\n",
-      "Val Loss: 0.1729, Val Acc: 92.93%\n",
+      "Train Loss: 0.2120, Train Acc: 91.40%\n",
+      "Val Loss: 0.1870, Val Acc: 92.30%\n",
       "\n",
       "Epoch [8/20]\n",
-      "Train Loss: 0.1801, Train Acc: 92.73%\n",
-      "Val Loss: 0.1722, Val Acc: 92.95%\n",
+      "Train Loss: 0.2094, Train Acc: 91.56%\n",
+      "Val Loss: 0.1826, Val Acc: 92.62%\n",
       "\n",
       "Epoch [9/20]\n",
-      "Train Loss: 0.1783, Train Acc: 92.82%\n",
-      "Val Loss: 0.1717, Val Acc: 92.97%\n",
+      "Train Loss: 0.2074, Train Acc: 91.47%\n",
+      "Val Loss: 0.1934, Val Acc: 91.58%\n",
       "\n",
       "Epoch [10/20]\n",
-      "Train Loss: 0.1778, Train Acc: 92.79%\n",
-      "Val Loss: 0.1714, Val Acc: 93.00%\n",
+      "Train Loss: 0.2071, Train Acc: 91.58%\n",
+      "Val Loss: 0.1769, Val Acc: 92.72%\n",
       "\n",
       "Epoch [11/20]\n",
-      "Train Loss: 0.1769, Train Acc: 92.86%\n",
-      "Val Loss: 0.1710, Val Acc: 93.02%\n",
+      "Train Loss: 0.2044, Train Acc: 91.61%\n",
+      "Val Loss: 0.1758, Val Acc: 92.68%\n",
       "\n",
       "Epoch [12/20]\n",
-      "Train Loss: 0.1764, Train Acc: 92.94%\n",
-      "Val Loss: 0.1706, Val Acc: 93.04%\n",
+      "Train Loss: 0.2044, Train Acc: 91.58%\n",
+      "Val Loss: 0.1742, Val Acc: 93.00%\n",
       "\n",
       "Epoch [13/20]\n",
-      "Train Loss: 0.1762, Train Acc: 92.86%\n",
-      "Val Loss: 0.1705, Val Acc: 93.02%\n",
+      "Train Loss: 0.2015, Train Acc: 91.73%\n",
+      "Val Loss: 0.1744, Val Acc: 93.09%\n",
       "\n",
       "Epoch [14/20]\n",
-      "Train Loss: 0.1755, Train Acc: 92.96%\n",
-      "Val Loss: 0.1702, Val Acc: 93.03%\n",
+      "Train Loss: 0.2017, Train Acc: 91.77%\n",
+      "Val Loss: 0.1734, Val Acc: 92.88%\n",
       "\n",
       "Epoch [15/20]\n",
-      "Train Loss: 0.1749, Train Acc: 92.96%\n",
-      "Val Loss: 0.1699, Val Acc: 93.07%\n",
+      "Train Loss: 0.2014, Train Acc: 91.79%\n",
+      "Val Loss: 0.1732, Val Acc: 93.13%\n",
       "\n",
       "Epoch [16/20]\n",
-      "Train Loss: 0.1750, Train Acc: 92.94%\n",
-      "Val Loss: 0.1696, Val Acc: 93.05%\n",
+      "Train Loss: 0.2009, Train Acc: 91.71%\n",
+      "Val Loss: 0.1731, Val Acc: 92.75%\n",
       "\n",
       "Epoch [17/20]\n",
-      "Train Loss: 0.1728, Train Acc: 93.07%\n",
-      "Val Loss: 0.1695, Val Acc: 93.08%\n",
+      "Train Loss: 0.2010, Train Acc: 91.72%\n",
+      "Val Loss: 0.1732, Val Acc: 92.85%\n",
       "\n",
       "Epoch [18/20]\n",
-      "Train Loss: 0.1734, Train Acc: 92.99%\n",
-      "Val Loss: 0.1693, Val Acc: 93.09%\n",
+      "Train Loss: 0.1973, Train Acc: 91.90%\n",
+      "Val Loss: 0.1739, Val Acc: 92.66%\n",
       "\n",
       "Epoch [19/20]\n",
-      "Train Loss: 0.1732, Train Acc: 93.00%\n",
-      "Val Loss: 0.1692, Val Acc: 93.10%\n",
+      "Train Loss: 0.1992, Train Acc: 91.90%\n",
+      "Val Loss: 0.1722, Val Acc: 92.86%\n",
       "\n",
       "Epoch [20/20]\n",
-      "Train Loss: 0.1731, Train Acc: 93.04%\n",
-      "Val Loss: 0.1689, Val Acc: 93.11%\n",
+      "Train Loss: 0.1965, Train Acc: 91.96%\n",
+      "Val Loss: 0.1801, Val Acc: 92.18%\n",
       "\n"
      ]
     }
